[Update] Algorithm and view, edit some logic for stream views